--- a/Views/_ViewStart.cshtml
+++ b/Views/_ViewStart.cshtml
@@ -1,40 +1,46 @@
 ﻿@using QuanLyCongTacTroGiangKhoaCNTT.Models
 @{
-    CongTacTroGiangKhoaCNTTEntities model = new CongTacTroGiangKhoaCNTTEntities();
-    var users = model.TaiKhoan.FirstOrDefault(f => f.Email.ToLower().Equals(User.Identity.Name.ToLower()));
-    if (users != null)
+    try
     {
-        int roleId = Int32.Parse(users.AspNetUsers.AspNetRoles.First().ID);
+        CongTacTroGiangKhoaCNTTEntities model = new CongTacTroGiangKhoaCNTTEntities();
+        var users = model.TaiKhoan.FirstOrDefault(f => f.Email.ToLower().Equals(User.Identity.Name.ToLower()));
+        if (users != null)
+        {
+            int roleId = Int32.Parse(users.AspNetUsers.AspNetRoles.First().ID);
 
-        Session["user-id"] = users.ID;
-        Session["user-email"] = users.Email;
-        Session["user-name"] = users.HoTen;
-        Session["user-role-name"] = users.AspNetUsers.AspNetRoles.First().Name;
-        Session["user-role-id"] = roleId;
+            Session["user-id"] = users.ID;
+            Session["user-email"] = users.Email;
+            Session["user-name"] = users.HoTen;
+            Session["user-role-name"] = users.AspNetUsers.AspNetRoles.First().Name;
+            Session["user-role-id"] = roleId;
 
-        if (roleId == 1)
-        {
-            Session["layout"] = "~/Views/Shared/_StudentLayout.cshtml";
+            if (roleId == 1)
+            {
+                Session["layout"] = "~/Views/Shared/_StudentLayout.cshtml";
+            }
+            else if (roleId == 2)
+            {
+                Session["layout"] = "~/Views/Shared/_TeacherLayout.cshtml";
+            }
+            else if (roleId == 3)
+            {
+                Session["layout"] = "~/Views/Shared/_DepartmentLayout.cshtml";
+            }
+            else if (roleId == 4)
+            {
+                Session["layout"] = "~/Views/Shared/_TALayout.cshtml";
+            }
+            else if (roleId == 5)
+            {
+                Session["layout"] = "~/Views/Shared/_OfficeOfTrainingLayout.cshtml";
+            }
+            else
+            {
+                Session["layout"] = "~/Views/Shared/_Layout.cshtml";
+            }
         }
-        else if (roleId == 2)
-        {
-            Session["layout"] = "~/Views/Shared/_TeacherLayout.cshtml";
-        }
-        else if (roleId == 3)
-        {
-            Session["layout"] = "~/Views/Shared/_DepartmentLayout.cshtml";
-        }
-        else if (roleId == 4)
-        {
-            Session["layout"] = "~/Views/Shared/_TALayout.cshtml";
-        }
-        else if (roleId == 5)
-        {
-            Session["layout"] = "~/Views/Shared/_OfficeOfTrainingLayout.cshtml";
-        }
-        else
-        {
-            Session["layout"] = "~/Views/Shared/_Layout.cshtml";
-        }
+    }
+    catch (Exception)
+    {
     }
 }
