--- a/Views/TeachingAssistant/_EditRegister.cshtml
+++ b/Views/TeachingAssistant/_EditRegister.cshtml
@@ -52,7 +52,7 @@
         <div class="col-12">
             <div class="mb-3">
                 <label class="form-label" for="editthoigianmo">
-                    Thời gian mở <span class="text-danger">*</span>
+                    Ngày mở <span class="text-danger">*</span>
                 </label>
                 <input type="date" value="@Model.ThoiGianMo.ToString("yyyy-MM-dd")" id="editthoigianmo" class="form-control flatpickr" placeholder="Chọn thời gian mở">
                 <span class="text-danger" id="valid-editthoigianmo"></span>
@@ -61,7 +61,7 @@
         <div class="col-12">
             <div class="mb-3">
                 <label class="form-label" for="editthoigiandong">
-                    Thời gian đóng <span class="text-danger">*</span>
+                    Ngày đóng <span class="text-danger">*</span>
                 </label>
                 <input type="date" id="editthoigiandong" value="@Model.ThoiGianDong.Value.ToString("yyyy-MM-dd")" class="form-control flatpickr" placeholder="Chọn thời gian đóng">
                 <span class="text-danger" id="valid-editthoigiandong"></span>
