--- a/Views/_ViewStart.cshtml
+++ b/Views/_ViewStart.cshtml
@@ -7,7 +7,7 @@
         if (users != null)
         {
             int roleId = Int32.Parse(users.AspNetUsers.AspNetRoles.First().ID);
-
+            Session["TaiKhoan"] = users;
             Session["user-id"] = users.ID;
             Session["user-email"] = users.Email;
             Session["user-name"] = users.HoTen;
